--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -2124,7 +2124,7 @@
     <ClInclude Include="..\..\..\sonia\bang\ast\casts\expression_cast_to_enum_visitor.hpp">
       <Filter>sonia.bang\ast\casts</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\bang\ast\lvalue_expression_visitor.hpp">
+    <ClInclude Include="..\..\..\sonia\bang\ast\lvalue_expression_visitor_obs.hpp">
       <Filter>sonia.bang\ast</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\bang\semantic_fwd.hpp">
@@ -2292,10 +2292,7 @@
     <ClInclude Include="..\..\..\sonia\bang\entities\struct\new_struct_pattern.hpp">
       <Filter>sonia.bang\entities\struct</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\make_tuple_pattern.hpp">
-      <Filter>sonia.bang\entities\tuple</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_get_pattern.hpp">
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_make_pattern.hpp">
       <Filter>sonia.bang\entities\tuple</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\bang\errors\circular_dependency_error.hpp">
@@ -2331,7 +2328,7 @@
     <ClInclude Include="..\..\..\sonia\utility\concurrency\call_once.hpp">
       <Filter>sonia.utility\concurrency</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_set_pattern.hpp">
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\set_pattern.hpp">
       <Filter>sonia.bang\entities\tuple</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\bang\ast\functional_declaration_visitor.hpp">
@@ -2346,17 +2343,41 @@
     <ClInclude Include="..\..\..\sonia\bang\entities\struct\struct_init_pattern.hpp">
       <Filter>sonia.bang\entities\struct</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\bang\entities\metaobject\head_pattern.hpp">
+    <ClInclude Include="..\..\..\sonia\bang\entities\metaobject\metaobject_head_pattern.hpp">
       <Filter>sonia.bang\entities\metaobject</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\bang\entities\metaobject\tail_pattern.hpp">
+    <ClInclude Include="..\..\..\sonia\bang\entities\metaobject\metaobject_tail_pattern.hpp">
       <Filter>sonia.bang\entities\metaobject</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\bang\entities\metaobject\metaobject_argument_pattern.hpp">
       <Filter>sonia.bang\entities\metaobject</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\sonia\bang\entities\metaobject\empty_pattern.hpp">
+    <ClInclude Include="..\..\..\sonia\bang\entities\metaobject\metaobject_empty_pattern.hpp">
       <Filter>sonia.bang\entities\metaobject</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\ast\base_expression_visitor.hpp">
+      <Filter>sonia.bang\ast</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_empty_pattern.hpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_head_pattern.hpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_get_pattern.hpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_tail_pattern.hpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\functions\value_match_visitor.hpp">
+      <Filter>sonia.bang\entities\functions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\errors\value_mismatch_error.hpp">
+      <Filter>sonia.bang\errors</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\bang\entities\functions\value_type_match_visitor.hpp">
+      <Filter>sonia.bang\entities\functions</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -2753,7 +2774,7 @@
     <ClCompile Include="..\..\..\sonia\bang\entities\struct\new_struct_pattern.cpp">
       <Filter>sonia.bang\entities\struct</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\make_tuple_pattern.cpp">
+    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_make_pattern.cpp">
       <Filter>sonia.bang\entities\tuple</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_get_pattern.cpp">
@@ -2809,6 +2830,27 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\bang\entities\metaobject\metaobject_empty_pattern.cpp">
       <Filter>sonia.bang\entities\metaobject</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\ast\base_expression_visitor.cpp">
+      <Filter>sonia.bang\ast</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_empty_pattern.cpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_head_pattern.cpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\tuple\tuple_tail_pattern.cpp">
+      <Filter>sonia.bang\entities\tuple</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\functions\value_match_visitor.cpp">
+      <Filter>sonia.bang\entities\functions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\errors\value_mismatch_error.cpp">
+      <Filter>sonia.bang\errors</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\bang\entities\functions\value_type_match_visitor.cpp">
+      <Filter>sonia.bang\entities\functions</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
