--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -261,9 +261,12 @@
     <ClInclude Include="..\..\..\sonia\bang\bang.yy.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\const_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\ellipsis\ellipsis_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\enum\enum_entity.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\enum\enum_implicit_cast_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\functions\create_identifier_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\functions\expression_resolver.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\functions\extern\to_string_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\functions\match_utility.ipp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\functions\signature_matcher.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\functions\value_match_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\functions\value_type_match_visitor.hpp" />
@@ -274,7 +277,6 @@
     <ClInclude Include="..\..\..\sonia\bang\entities\metaobject\metaobject_tail_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\metaobject\typeof_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\signatured_entity.hpp" />
-    <ClInclude Include="..\..\..\sonia\bang\entities\enum_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\functional.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\functional_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\functional_registry.hpp" />
@@ -283,7 +285,8 @@
     <ClInclude Include="..\..\..\sonia\bang\entities\functions\function_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\functions\parameter_type_expression_visitor.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\internal_type_entity.hpp" />
-    <ClInclude Include="..\..\..\sonia\bang\entities\struct\new_struct_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\struct\struct_implicit_cast_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\struct\struct_new_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\struct\struct_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\struct\struct_fn_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\struct\struct_get_pattern.hpp" />
@@ -293,7 +296,7 @@
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_head_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_make_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_pattern.hpp" />
-    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\set_pattern.hpp" />
+    <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_set_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\tuple\tuple_tail_pattern.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\type_entity.hpp" />
     <ClInclude Include="..\..\..\sonia\bang\entities\variable_entity.hpp" />
@@ -755,7 +758,8 @@
     <ClCompile Include="..\..\..\sonia\bang\bang_semantic.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\bang_unit.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\ellipsis\ellipsis_pattern.cpp" />
-    <ClCompile Include="..\..\..\sonia\bang\entities\enum_entity.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\enum\enum_entity.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\enum\enum_implicit_cast_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\functional.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\functional_entity.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
@@ -784,7 +788,8 @@
     <ClCompile Include="..\..\..\sonia\bang\entities\metaobject\metaobject_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\metaobject\metaobject_tail_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\metaobject\metaobject_typeof_pattern.cpp" />
-    <ClCompile Include="..\..\..\sonia\bang\entities\struct\new_struct_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\struct\struct_implicit_cast_pattern.cpp" />
+    <ClCompile Include="..\..\..\sonia\bang\entities\struct\struct_new_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\struct\struct_entity.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\struct\struct_fn_pattern.cpp" />
     <ClCompile Include="..\..\..\sonia\bang\entities\struct\struct_get_pattern.cpp" />
